--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,19 @@ body {
   text-align: center;
 }
 
+h1 {
+  padding-top: 2%;
+  padding-bottom: 3%;
+  font-size: 10%;
+}
+
 img {
-  max-width: 90%;
-  max-height: 90%;
+  max-width: 40%;
+  max-height: 700px;
+}
+
+.btn {
+  margin-top: 1rem;
 }
 
 code {
